Fixed bug: Shop layout was not aligned when browsing without loggin in

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,12 +31,12 @@ header .logo {
 
 .nav-item {
   left: -30px;
-  top: -30px;
+  top: -40px;
 }
 
 .nav-title {
   left: -30px;
-  padding: 2.8rem 1rem !important;
+  padding: 3.1rem 1rem !important;
 }
 
 .nav > ul > a:focus,
@@ -81,64 +81,54 @@ header .logo {
   margin-top: 25px;
 }
 
-.card.shop {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  width: 500px;
-  height: 500px;
-  left: -5px;
-  top: -21px;
-  border: transparent;
-}
-
-.book_detail_wrapper {
+.book-details-wrapper {
   display: flex;
   margin-bottom: 140px;
   text-align: center;
 }
 
-.book_detail_wrapper .right {
+.book-details-wrapper .right {
   flex-grow: 1;
   min-height: 800px;
 }
 
-.book_detail_wrapper p {
+.book-details-wrapper p {
   font-size: 17px;
   font-family: Arial, Helvetica;
   font-weight: lighter;
 }
 
-.book_detail_wrapper .book_tags {
+.book-details-wrapper .book-tags {
   padding-bottom: 10px;
 }
 
-.book_detail_wrapper .book_tags .tag {
+.book-details-wrapper .book-tags .tag {
   display: flex;
   margin-bottom: 20px;
 }
 
-.book_detail_wrapper .book_tags .tag svg {
+.book-details-wrapper .book-tags .tag svg {
   font-size: 43px;
   color: #e4e4e4;
   width: 50px;
 }
 
-.book_detail_wrapper .book_tags .tag .tag_text {
+.book-details-wrapper .book-tags .tag .tag_text {
   font-size: 14px;
   text-transform: uppercase;
   color: #999592;
   padding-left: 20px;
 }
 
-.book_detail_wrapper .book_actions .price {
+.book-details-wrapper .book_actions .price {
   font-size: 40px;
   font-weight: 300;
 }
-.book_detail_wrapper .book_actions .cart {
+.book-details-wrapper .book_actions .cart {
   width: 149px;
 }
 
-.book_detail_wrapper .book_info .item {
+.book-details-wrapper .book-info .item {
   font-size: 15px;
   text-transform: uppercase;
   color: #fdfafa;
@@ -146,25 +136,25 @@ header .logo {
   padding-top: 15px;
 }
 
-.book_title {
+.book-title {
   color: white;
 }
 
-.user_info {
+.user-info {
   color: white;
 }
 
-.book_detail_wrapper .book_image_container {
+.book-details-wrapper .book_image_container {
   margin-top: 30px;
   padding-right: 70px;
 }
 
-.book_detail_wrapper .main_pic {
+.book-details-wrapper .main_pic {
   box-sizing: border-box;
   cursor: pointer;
 }
 
-.book_detail_wrapper .main_pic div {
+.book-details-wrapper .main_pic div {
   width: 100%;
   height: 446px;
   width: 446px;
@@ -173,11 +163,11 @@ header .logo {
   background-position: center center !important;
 }
 
-.book_detail_wrapper .main_thumbs {
+.book-details-wrapper .main_thumbs {
   margin-top: 10px;
 }
 
-.book_detail_wrapper .main_thumbs .thumb {
+.book-details-wrapper .main_thumbs .thumb {
   cursor: pointer;
   height: 200px;
   width: 50%;
@@ -188,7 +178,7 @@ header .logo {
   float: left;
 }
 
-.user_cart_block {
+.user-cart-block {
   display: flex;
   width: 800px;
   flex-wrap: wrap;
@@ -199,24 +189,24 @@ header .logo {
   text-align: left;
 }
 
-.user_cart_block .item {
+.user-cart-block .item {
   max-width: 195px;
   flex-grow: 1;
   padding: 10px;
 }
 
-.user_cart_block .item .image {
+.user-cart-block .item .image {
   height: 125px;
   width: 125px;
   background-size: contain !important;
   background-repeat: no-repeat !important;
   background-position: center center !important;
 }
-.user_cart_block .item.btn {
+.user-cart-block .item.btn {
   width: 0px;
 }
 
-.user_cart_block .cart_remove_btn {
+.user-cart-block .cart-remove-btn {
   cursor: pointer;
   background: #f44336;
   display: inline-block;
@@ -225,7 +215,7 @@ header .logo {
   margin-top: 50px;
 }
 
-.user_cart_total {
+.user-cart-total {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -400,7 +390,7 @@ header .logo {
   grid-template-columns: repeat(3, 1fr);
   width: 500px;
   height: 500px;
-  left: 160px;
+  left: 197px;
   top: -21px;
   border: transparent;
 }
